worked on visuals and pagination and slider

--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,8 @@
 <script src="/js/jquery.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 
+<script src="/js/nouislider.min.js"></script>
+
 <!-- sticky nav -->
 <script src="/js/jquery.easing.min.js"></script>
 <script src="/js/scrolling-nav-sticky.js"></script>
