--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
 <![endif]-->
 <link rel="stylesheet" href="/main.css">
 
+<link href="//cdn.bootcss.com/noUiSlider/8.5.1/nouislider.min.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -53,7 +55,8 @@
 <script src="/js/jquery.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 
-<script src="/js/nouislider.min.js"></script>
+<!-- <script src="/js/nouislider.min.js"></script> -->
+<script src="//cdn.bootcss.com/noUiSlider/8.5.1/nouislider.js"></script>
 
 <!-- sticky nav -->
 <script src="/js/jquery.easing.min.js"></script>
